--- a/main/index.css
+++ b/main/index.css
@@ -1,1 +1,14 @@
 *
+ #div1 {
+    width: 320px;
+    height: 50px;
+    padding: 10px;
+    border: 5px solid gray;
+    margin: 0;
+    background-color: white;
+  }
+  
+  body {
+    background-color: aqua;
+    border: 2px black;
+  }
